Wed Nov  3 12:47:41 GMT 2004 (njh)
----------------------------------
  * libclamav/clamav-milter:	Save the original subject as X-Original-Subject
  			when running in advisory or qurantine mode
			SESSION mode: warn when no clamd can be reached

Wed Nov  3 12:50:19 CET 2004 (tk)
---------------------------------
  * docs/MacOSX: update (Dale Enterprise L.L.C)

Tue Nov  2 13:26:01 CET 2004 (tk)
---------------------------------
  * libclamav/clamav.h: fix bad alias of CL_ENCRYPTED (thanks to Jan ONDREJ
			(SAL) <ondrejj*salstar.sk>)

Tue Nov  2 05:12:45 CET 2004 (tk)
---------------------------------
  * docs/MacOSX: update (Dale Enterprise L.L.C)

Tue Nov  2 04:58:43 CET 2004 (tk)
---------------------------------
  * libclamav, clamd: readdir_r code: provide additional space (for at least
		      NAME_MAX + 1 characters) in the d_name array on systems
		      that don't define the d_name element sufficiently long
		      (thanks to Andy Fiddaman <clam*fiddaman.net> for a
		      pointer)

Sun Oct 31 09:31:06 GMT 2004 (njh)
----------------------------------
  * libclamav:		Improve the handling of blank filenames for attachments
			Handle unbalanced quotes in multipart headers

Sat Oct 30 07:50:33 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Fix possible crash when one or more servers can't be
				contacted

Fri Oct 29 19:11:07 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Fix problem with deleting X-VIRUS-STATUS not setting
				correct libmilter settings

Fri Oct 29 02:19:48 CEST 2004 (tk)
----------------------------------
  * clamdscan: update manual page and fix return code for "unknown option"
	       error

Thu Oct 28 09:14:22 BST 2004 (njh)
----------------------------------
  * libclamav/strrcpy.c:	Ensure that assert is only used if
					--enable-debug is given to configure

Wed Oct 27 13:36:14 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Remove X-VIRUS-STATUS on incoming messages