@@ -544,6 +544,7 @@ Changes
 0.80o	3/11/04	SESSION: Warn if no clamd servers can be contacted when starting
 		When changing a subject, keep the original subject in
 			X-Original-Subject
+0.80p	4/11/04	SESSION: Fix bug causing crash when using LocalSocket mode
 
 INTERNATIONALISATION
 
