@@ -1,7 +1,12 @@
+Thu Nov  4 08:24:21 GMT 2004 (njh)
+----------------------------------
+  * libclamav/clamav-milter:	Fix segfault on startup in LocalSocket mode in
+			SESSION mode
+
 Wed Nov  3 12:47:41 GMT 2004 (njh)
 ----------------------------------
   * libclamav/clamav-milter:	Save the original subject as X-Original-Subject
-  			when running in advisory or qurantine mode
+			when running in advisory or qurantine mode
 			SESSION mode: warn when no clamd can be reached
 
 Wed Nov  3 12:50:19 CET 2004 (tk)
